Some logic changes, and repairemoved extra symbols from seeds.rb.

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -41,3 +41,12 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+.boxes {
+  background-color: green;
+}
+
+.h4 {
+  padding-left: 1em;
+  padding-right: 1em;
+}
