image box behind grids

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -20,6 +20,7 @@ body {
   background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(./img/Movie-Collage.jpg);
   position: relative;
   min-height:100%;
+  z-index: 5;
 }
 
 footer {
@@ -34,35 +35,34 @@ footer {
 
 .game-grid-container {
   display: grid;
-  z-index: 0;
+  z-index: 9;
   grid-template-columns: auto auto auto;
   /* background-color: #0005; */
   background-repeat: no-repeat;
   background-size: auto;
   background-position: center center;
-  padding: 10px;
 }
 .grid-item {
-  /* background-color: #0005; */
+  /* background-color: rgba(128, 128, 255, 1.0); */
   border: 2px solid rgba(0, 0, 0, 0.8);
-  padding: 10px;
   font-size: 30px;
   text-align: center;
 }
 .inner-game-grid-container {
   display: grid;
+  background: url(img/the_shining.jpg);
+  background-repeat: no-repeat;
   grid-template-columns: auto auto auto;
   text-align: center;
   background-size: auto;
   background-position: center center;
-  padding: 10px;
 }
 .inner-grid-item {
-  /* background-color: rgba(orange); */
+  background-color: rgba(128, 128, 255, 1.0);
   border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 5px;
   font-size: 30px;
   text-align: center;
+  height: 3em;
 }
 
 #choices-div {
@@ -95,12 +95,9 @@ footer {
   border-radius: 20px;
   padding-left: 1em;
   padding-right: 1em;
-<<<<<<< HEAD
   margin-bottom: 2em;
   width: 14em;
   font-size: 20px;
-  /* height: 4em; */
-=======
   margin: 0;
 }
 
@@ -110,17 +107,22 @@ footer {
 }
 
 .big-answer-text-green {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   color: green;
   margin: 0;
   padding: 0;
+  border: 2px;
+  border-radius: 20px;
 }
 
 .big-answer-text-red {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   color: red;
   margin: 0;
   padding: 0;
+  border: 2px;
+  border-radius: 20px;
+  border-color:
 }
 
 .text-box {
