--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -17,7 +17,7 @@ header {
 }
 
 body {
-  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(./img/Movie-Collage.jpg);
+  background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4) ), url(./img/Movie-Collage.jpg);
   position: relative;
   min-height:100%;
   z-index: 5;
@@ -105,20 +105,23 @@ footer {
 
 
 #question-box {
-  background-color: #0007;
   color: rgba(229, 299, 229, 1.0);
   width: 25em;
+  margin-bottom: 3em;
+
 }
 
 
 .question-paragraph {
+  background-color: orange;
   border: solid;
   border-radius: 20px;
-  margin-top: 0.5em;
+  margin-top: 1.5em;
   padding: 0.5em;
   line-height: 1.3;
   font-size: 23px;
   font-weight: 600;
+  margin-bottom: -1em;
 }
 
 .big-answer-text-green {
@@ -131,7 +134,7 @@ footer {
   border: solid;
   border-radius: 20px;
   margin-bottom: 0.5em;
-  margin-top: 0.5em;
+  margin-top: 1.5em;
   padding: 0.2em;
 }
 
@@ -149,7 +152,7 @@ footer {
   border: solid;
   border-radius: 20px;
   margin-bottom: 0.5em;
-  margin-top: 0.5em;
+  margin-top: 1.5em;
   padding: 0.2em;
 }
 
@@ -165,6 +168,7 @@ footer {
   font-size: 1em;
   color: white;
   background-color: black;
+  margin-top: -1em;
 }
 
 .input {
@@ -173,7 +177,6 @@ footer {
 }
 
 .form {
-  background-color: black;
 }
 
 .team-buzzer{
