--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -8,7 +8,7 @@ html{
 }
 
 header {
-  background-color: rgba(223, 179, 51);
+  background-color: rgba(246, 179, 51);
   height: 4em;
   width: 100%;
   position: relative;
@@ -17,7 +17,7 @@ header {
 }
 
 body {
-  background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4) ), url(./img/Movie-Collage.jpg);
+  background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) ), url(./img/Movie-Collage.jpg);
   position: relative;
   min-height:100%;
   z-index: 5;
@@ -25,13 +25,13 @@ body {
 }
 
 footer {
-  background-color: rgba(223, 179, 51);
+  background-color: rgba(246, 179, 51);
   height: 4em;
   width: 100%;
   position: absolute;
   left: 0px;
-  bottom: 0px;
-  margin-top: 3em;
+  /* bottom: 0px; */
+  margin-top: -2em;
 }
 
 .game-grid-container {
@@ -87,11 +87,11 @@ footer {
 }
 
 .choice-button {
-  background-color: orange;
+  background-color: rgba(223, 179, 51, 0.3);
   border-color: black;
   width: calc(47% - 1em);
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-content: space-around;
   border: solid;
   border-radius: 20px;
@@ -114,7 +114,7 @@ footer {
 
 
 .question-paragraph {
-  background-color: orange;
+  background-color: rgba(223, 179, 51, 0.3);
   border: solid;
   border-radius: 20px;
   margin-top: 1.5em;
@@ -126,7 +126,7 @@ footer {
 }
 
 .big-answer-text-green {
-  background-color: grey;
+  background-color: rgba(0, 0, 0, 0.4);
   border-color: black;
   /* width: calc(47% - 1em); */
   display: flex;
@@ -144,7 +144,7 @@ footer {
 }
 
 .big-answer-text-red {
-  background-color: grey;
+  background-color: rgba(0, 0, 0, 0.4);
   border-color: black;
   /* width: calc(47% - 1em); */
   display: flex;
@@ -168,7 +168,7 @@ footer {
   padding: 0.5em 0.5em;
   font-size: 1em;
   color: white;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.6);
   margin-top: -1em;
 }
 
