--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -9,7 +9,7 @@ html{
 
 header {
   background-color: rgba(246, 179, 51);
-  height: 4em;
+  height: 5em;
   width: 100%;
   position: relative;
   min-height:100%;
@@ -31,7 +31,7 @@ footer {
   position: absolute;
   left: 0px;
   /* bottom: 0px; */
-  margin-top: -2em;
+  margin-top: ;
 }
 
 .game-grid-container {
@@ -59,9 +59,10 @@ footer {
   background-repeat: no-repeat;
   grid-template-columns: auto auto auto;
   text-align: center;
-  background-size: auto;
+  background-size: 100%;
   background-position: center center;
-  width: 21em;
+  width: 25em;
+  height: auto;
 }
 
 
@@ -83,7 +84,7 @@ footer {
   flex-wrap: wrap;
   align-content: stretch;
   height: 100%;
-  margin: 0.3em;
+  /* margin: 0.3em; */
 }
 
 .choice-button {
@@ -108,7 +109,7 @@ footer {
 #question-box {
   color: rgba(229, 299, 229, 1.0);
   width: 25em;
-  margin-bottom: 3em;
+  margin-bottom: 1.6em;
   justify-self: center;
 }
 
@@ -117,10 +118,10 @@ footer {
   background-color: rgba(223, 179, 51, 0.3);
   border: solid;
   border-radius: 20px;
-  margin-top: 1.5em;
+  margin-top: 0.5em;
   padding: 0.5em;
   line-height: 1.3;
-  font-size: 23px;
+  font-size: 0.6em;
   font-weight: 600;
   margin-bottom: -1em;
 }
@@ -184,13 +185,30 @@ footer {
 .form {
 }
 
-.team-buzzer{
-  size: 2em;
+.team-buzzer {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  margin-bottom: 5em;
-  height: 7em;
+  align-items: center;
+}
+
+.team-buzzer_one {
+  width: 5em;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  margin: 0.4em;
+  /* margin-bottom: 5em; */
+}
+
+.team-buzzer_two {
+  width: 5em;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  margin: 0.4em;
+
+
+  /* margin-bottom: 5em; */
 }
 
 .team-buzzer:hover{
@@ -213,4 +231,19 @@ footer {
   flex-direction: column;
   justify-content: center;
   flex-direction: row;
+}
+
+.vs_logo {
+  width: 6em;
+  margin-top: ;
+  margin-bottom: ;
+}
+
+.title_logo {
+  width: 16em;
+  margin-top: -2.5em;
+}
+
+.start_button {
+  width: 3em;
 }
