--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -8,7 +8,7 @@ html{
 }
 
 header {
-  background-color: rgba(246, 179, 51);
+  background-color: rgba(246, 179, 51, 0.8);
   height: 5em;
   width: 100%;
   position: relative;
@@ -17,7 +17,7 @@ header {
 }
 
 body {
-  background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) ), url(./img/Movie-Collage.jpg);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url(./img/Movie-Collage.jpg);
   position: relative;
   min-height:100%;
   z-index: 5;
@@ -25,7 +25,7 @@ body {
 }
 
 footer {
-  background-color: rgba(246, 179, 51);
+  background-color: rgba(246, 179, 51, 0.8);
   height: 4em;
   width: 100%;
   position: absolute;
@@ -109,7 +109,8 @@ footer {
 #question-box {
   color: rgba(229, 299, 229, 1.0);
   width: 25em;
-  margin-bottom: 1.6em;
+  /* margin-bottom: 1.6em; */
+  padding: 1em;
   justify-self: center;
 }
 
@@ -135,9 +136,10 @@ footer {
   align-content: space-around;
   border: solid;
   border-radius: 20px;
-  margin-bottom: 0.5em;
-  margin-top: 1.5em;
-  padding: 0.2em;
+  /* margin-bottom: 0.5em; */
+  /* margin-top: 1.5em; */
+  padding: 0.4em;
+  margin: 1em;
 }
 
 .big-answer-text-green p {
@@ -153,9 +155,10 @@ footer {
   align-content: space-around;
   border: solid;
   border-radius: 20px;
-  margin-bottom: 0.5em;
-  margin-top: 1.5em;
-  padding: 0.2em;
+  /* margin-bottom: 0.5em; */
+  /* margin-top: 1.5em; */
+  padding: 0.4em;
+  margin: 1em;
 }
 
 .big-answer-text-red p {
@@ -197,6 +200,7 @@ footer {
   justify-content: center;
   align-items: center; */
   margin: 0.4em;
+  margin-right: -2em;
   /* margin-bottom: 5em; */
 }
 
@@ -206,13 +210,12 @@ footer {
   justify-content: center;
   align-items: center; */
   margin: 0.4em;
-
-
+  margin-left: -2em;
   /* margin-bottom: 5em; */
 }
 
 .team-buzzer:hover{
-  opacity: 0.7;
+
 }
 
 #question-div {
