--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -31,8 +31,13 @@ footer {
   width: 100%;
   position: absolute;
   left: 0px;
+  padding-right: 3em;
   /* bottom: 0px; */
-  margin-top: 1em;
+  margin-top: 1.5em;
+}
+
+submit {
+
 }
 
 .game-grid-container {
@@ -122,7 +127,7 @@ footer {
 #question-box {
   color: rgba(229, 299, 229, 1.0);
   width: 25em;
-  /* margin-bottom: 1.6em; */
+  margin-bottom: 1.5em;
   padding: 1em;
   justify-self: center;
 }
@@ -204,7 +209,9 @@ footer {
 .team-buzzer {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  margin-top: 2em;
+
 }
 
 .team-buzzer_one {
