--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -34,7 +34,7 @@ footer {
   left: 0px;
   /* padding-right: 1.2em; */
   /* bottom: 0px; */
-  margin-top: 1.5em;
+  margin-top: 4.5em;
 }
 
 
@@ -276,7 +276,7 @@ footer {
 
 .title-box p {
   background-color: rgba(223, 179, 51, 0.3);
-  border-color: #fff;
+  border-color: rgba(229, 299, 229, 1.0);
   width: calc(47% - 1em);
   display: flex;
   justify-content: center;
@@ -285,7 +285,7 @@ footer {
   border-radius: 20px;
   /* margin-bottom: 1em; */
   margin-top: 1.5em;
-  padding: 0 0.8em 0 0.8em;
+  padding: 0 1.2em 0 1.2em;
 }
 
 .team-score{
