--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -32,17 +32,15 @@ footer {
   width: 100%;
   position: absolute;
   left: 0px;
-  /* padding-right: 1.2em; */
-  /* bottom: 0px; */
   margin-top: 4.5em;
 }
 
+/* GAME GRID CONTAINER ITEMS */
 
 .game-grid-container {
   display: grid;
   z-index: 9;
   grid-template-columns: 7em auto 7em;
-  /* background-color: #0005; */
   background-repeat: no-repeat;
   background-size: auto;
   background-position: center center;
@@ -50,16 +48,15 @@ footer {
   text-align: center;
 }
 
-.grid-item {
-  /* background-color: rgba(246, 179, 51, 1.0); */
+/* background-color: rgba(246, 179, 51, 1.0); */
+/* .grid-item {
   border: 2px solid rgba(0, 0, 0, 0.8);
   font-size: 30px;
   text-align: center;
-}
+} */
 
 .inner-game-grid-container {
   display: grid;
-  /* background: url(img/the_shining.jpg); */
   background-repeat: no-repeat;
   grid-template-columns: auto auto auto;
   text-align: center;
@@ -74,7 +71,6 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* background-color: rgba(246, 179, 51, 1.0); */
   border: 1px solid rgba(0, 0, 0, 0.8);
   font-size: 30px;
   text-align: center;
@@ -91,8 +87,6 @@ footer {
   background-color: rgba(246, 220, 51, 1);
 }
 
-
-
 #choices-div {
   display: flex;
   justify-content: center;
@@ -100,7 +94,6 @@ footer {
   flex-wrap: wrap;
   align-content: stretch;
   height: 100%;
-  /* margin: 0.3em; */
 }
 
 .choice-button {
@@ -112,7 +105,6 @@ footer {
   align-content: space-around;
   border: solid;
   border-radius: 20px;
-  /* margin-bottom: 1em; */
   margin: 0.3em;
   padding: 0.2em;
 }
@@ -130,7 +122,6 @@ footer {
   justify-self: center;
 }
 
-
 .question-paragraph {
   background-color: rgba(223, 179, 51, 0.3);
   border: solid;
@@ -146,14 +137,11 @@ footer {
 .big-answer-text-green {
   background-color: rgba(0, 0, 0, 0.4);
   border-color: black;
-  /* width: calc(47% - 1em); */
   display: flex;
   justify-content: left;
   align-content: space-around;
   border: solid;
   border-radius: 20px;
-  /* margin-bottom: 0.5em; */
-  /* margin-top: 1.5em; */
   padding: 0.4em;
   margin: 1em;
 }
@@ -165,14 +153,11 @@ footer {
 .big-answer-text-red {
   background-color: rgba(0, 0, 0, 0.4);
   border-color: black;
-  /* width: calc(47% - 1em); */
   display: flex;
   justify-content: left;
   align-content: space-around;
   border: solid;
   border-radius: 20px;
-  /* margin-bottom: 0.5em; */
-  /* margin-top: 1.5em; */
   padding: 0.4em;
   margin: 1em;
 }
@@ -214,22 +199,14 @@ footer {
 
 .team-buzzer_one {
   width: 5em;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   margin: 0.4em;
   margin-right: -2em;
-  /* margin-bottom: 5em; */
 }
 
 .team-buzzer_two {
   width: 5em;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   margin: 0.4em;
   margin-left: -2em;
-  /* margin-bottom: 5em; */
 }
 
 .team-buzzer:hover{
@@ -283,7 +260,6 @@ footer {
   align-content: space-around;
   border: solid;
   border-radius: 20px;
-  /* margin-bottom: 1em; */
   margin-top: 1.5em;
   padding: 0 1.2em 0 1.2em;
 }
