--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -35,7 +35,7 @@ footer.footer-main {
   background-color: rgba(246, 179, 51, 0.8);
   height: 4em;
   width: 100%;
-  margin-top: auto;
+  margin-top: 5em;
 }
 
 /* GAME GRID CONTAINER ITEMS */
